# person_detection

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
configs/: zones.example.json
docs/: ROADMAP.md
scripts/: serve_live.py
src/dementia_tracker/: __init__.py  cli.py  demo_data.py  detector.py  embeddings.py  live_backend.py  pipeline.py  registry.py  tracker.py  webapp.py  zones.py
tests/: test_vision_pipeline.py
web/: app.js  index.html  styles.css
