[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dementia-patient-tracker"
version = "0.1.0"
description = "Local-first prototype for identifying registered dementia patients in camera frames and alerting on monitored zones."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=10.0",
]

[project.optional-dependencies]
opencv = ["opencv-python-headless>=4.13"]

[project.scripts]
dementia-tracker = "dementia_tracker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
